--- a/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
+++ b/SleepApneaDiagnoser/SleepApneaDiagnoser/MainWindow.xaml
@@ -13,6 +13,7 @@
         Title="Sleep Apnea Analysis Tool" MinHeight="640" MinWidth="640" Height="768" Width="1366" Closing="Window_Closing" Loaded="Window_Loaded" StateChanged="Window_StateChanged" SizeChanged="Window_SizeChanged" WindowState="Maximized" TitleCaps="False" BorderBrush="{DynamicResource AccentColorBrush}" BorderThickness="1">
 
     <mtr:MetroWindow.Resources>
+        <BooleanToVisibilityConverter x:Key="Converter_BoolVis"/>
         <Style TargetType="TextBlock">
             <Setter Property="FontFamily" Value="Segoe UI"/>
         </Style>
@@ -37,15 +38,18 @@
                 <ScrollViewer >
                     <StackPanel Margin="0,0,0,0">
                         <Grid Margin="0,0,0,0">
-                        <Label Content="Signal Management" HorizontalAlignment="Left" Width="290" Height="32" VerticalAlignment="Top" Margin="10,0,0,0" FontWeight="Bold"/>
-                        <Button BorderThickness="0" Background="Transparent" HorizontalAlignment="Stretch" Margin="0,37,0,593" HorizontalContentAlignment="Left" Content="    Manage Categories" Height="37" Click="button_Categories_Click"/>
-                        <Button BorderThickness="0" Background="Transparent" HorizontalAlignment="Stretch" Margin="0,74,0,556" HorizontalContentAlignment="Left" Content="    Hide/Unhide EDF Signals" Height="37" Click="button_HideSignals_Click"/>
-                        <Button BorderThickness="0" Background="Transparent" HorizontalAlignment="Stretch" Margin="0,111,0,519" HorizontalContentAlignment="Left" Content="    Add Derivative" Height="37" Click="button_AddDerivative_Click"/>
-                        <Button BorderThickness="0" Background="Transparent" HorizontalAlignment="Stretch" Margin="0,148,0,482" HorizontalContentAlignment="Left" Content="    Remove Derivative" Height="37" Click="button_RemoveDerivative_Click"/>
-                        <Button BorderThickness="0" Background="Transparent" HorizontalAlignment="Stretch" Margin="0,185,0,445" HorizontalContentAlignment="Left" Content="    Add Filtered Signal" Height="37" Click="button_AddFilter_Click"/>
-                        <Button BorderThickness="0" Background="Transparent" HorizontalAlignment="Stretch" Margin="0,222,0,408" HorizontalContentAlignment="Left" Content="    Remove Filtered Signal" Height="37" Click="button_RemoveFilter_Click"/>
-
-                            <Grid Name="Bound_Settings" Width="271" VerticalAlignment="Top" HorizontalAlignment="Left"  Margin="0,270,0,0">
+                            <Grid Name="grid_MainMenu" VerticalAlignment="Top" HorizontalAlignment="Stretch"  Margin="0,0,0,0" Visibility="{Binding Path=SettingsMainMenuVisible, Converter={StaticResource Converter_BoolVis}}">
+                                <Label Content="Signal Management" HorizontalAlignment="Left" Width="290" Height="32" VerticalAlignment="Top" Margin="10,0,0,0" FontWeight="Bold"/>
+                                <Button BorderThickness="0" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="0,37,0,0" HorizontalContentAlignment="Left" Content="    Personalization" Height="37" Click="button_PersonalizationSettings_Click"/>
+                                <Button BorderThickness="0" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="0,74,0,0" HorizontalContentAlignment="Left" Content="    Respiratory Analysis" Height="37" Click="button_RespiratorySettings_Click"/>
+                                <Button BorderThickness="0" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="0,111,0,0" HorizontalContentAlignment="Left" Content="    Manage Categories" Height="37" Click="button_Categories_Click"/>
+                                <Button BorderThickness="0" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="0,148,0,0" HorizontalContentAlignment="Left" Content="    Hide/Unhide EDF Signals" Height="37" Click="button_HideSignals_Click"/>
+                                <Button BorderThickness="0" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="0,185,0,0" HorizontalContentAlignment="Left" Content="    Add Derivative" Height="37" Click="button_AddDerivative_Click"/>
+                                <Button BorderThickness="0" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="0,222,0,0" HorizontalContentAlignment="Left" Content="    Remove Derivative" Height="37" Click="button_RemoveDerivative_Click"/>
+                                <Button BorderThickness="0" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="0,259,0,0" HorizontalContentAlignment="Left" Content="    Add Filtered Signal" Height="37" Click="button_AddFilter_Click"/>
+                                <Button BorderThickness="0" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Stretch" Margin="0,296,0,0" HorizontalContentAlignment="Left" Content="    Remove Filtered Signal" Height="37" Click="button_RemoveFilter_Click"/>
+                            </Grid>
+                            <Grid Name="grid_Respiratory" VerticalAlignment="Top" HorizontalAlignment="Stretch"  Margin="0,0,0,0" Visibility="{Binding Path=SettingsRespiratoryVisible, Converter={StaticResource Converter_BoolVis}}">
                                 <!-- Respiratory Settings -->
                                 <Label Content="Respiratory Analysis" HorizontalAlignment="Left" Width="290" Height="32" VerticalAlignment="Top" Margin="10,0,0,0" FontWeight="Bold"/>
                                 <Label Content="Peak Detection Sensitivity (ms)" HorizontalAlignment="Left" Margin="15,35,0,0" VerticalAlignment="Top"/>
@@ -54,17 +58,20 @@
                                 <mtr:ToggleSwitchButton Margin="15,125,20,0" HorizontalAlignment="Right" FontFamily="Segoi UI" FontSize="14" IsChecked="{Binding RespiratoryRemoveMultiplePeaks}" VerticalAlignment="Top" />
                                 <TextBlock Name="TextBlock_RespAllowMultiplePeaks" FontFamily="Segoi UI" Text="Yes" HorizontalAlignment="Left" Margin="15,130,0,0" TextAlignment="Center" FontSize="14" Height="31" Width="35" VerticalAlignment="Top"/>
                                 <TextBlock Name="TextBlock_RespPendingChanges" Text="Changes applied when plot is redrawn." HorizontalAlignment="Left" Margin="15,160,0,0" Foreground="Blue"  Width="251" FontSize="14" Height="29" VerticalAlignment="Top"/>
-
+                                <Button BorderThickness="0" Background="Transparent" HorizontalAlignment="Stretch" Margin="0,220,0,408" HorizontalContentAlignment="Left" Content="    Back" Height="37" Click="button_MainMenuClick"/>
+                            </Grid>
+                            <Grid Name="grid_Personalization" VerticalAlignment="Top" HorizontalAlignment="Stretch"  Margin="0,0,0,0" Visibility="{Binding Path=SettingsPersonalizationVisible, Converter={StaticResource Converter_BoolVis}}">
                                 <!-- Personalization Settings -->
-                                <Label Content="Personalization" HorizontalAlignment="Left" Width="290" Height="32" VerticalAlignment="Top" Margin="10,180,0,0" FontWeight="Bold"/>
-                                <Label Content="Manually Select Theme Color" HorizontalAlignment="Left" Margin="15,215,0,0" VerticalAlignment="Top"/>
-                                <mtr:ToggleSwitch Margin="23,245,0,0" Width="228" HorizontalAlignment="Left" FontFamily="Segoi UI" FontSize="14" IsChecked="{Binding UseCustomColor}" VerticalAlignment="Top" />
-                                <xctk:ColorPicker Height="23" Margin="20,290,20,0" VerticalAlignment="Top"  FontFamily="Segoi UI" FontSize="14" IsEnabled="{Binding UseCustomColor}" SelectedColor="{Binding ThemeColor}"/>
-                                <Label Content="Use Dark Theme" HorizontalAlignment="Left" Margin="15,320,0,0" VerticalAlignment="Top"/>
-                                <mtr:ToggleSwitch Margin="23,350,0,0" Width="228" HorizontalAlignment="Left" FontFamily="Segoi UI" FontSize="14" IsChecked="{Binding UseDarkTheme}" VerticalAlignment="Top" />
+                                <Label Content="Personalization" HorizontalAlignment="Left" Width="290" Height="32" VerticalAlignment="Top" Margin="10,0,0,0" FontWeight="Bold"/>
+                                <Label Content="Manually Select Theme Color" HorizontalAlignment="Left" Margin="15,35,0,0" VerticalAlignment="Top"/>
+                                <mtr:ToggleSwitch Margin="23,65,0,0" Width="228" HorizontalAlignment="Left" FontFamily="Segoi UI" FontSize="14" IsChecked="{Binding UseCustomColor}" VerticalAlignment="Top" />
+                                <xctk:ColorPicker Height="23" Margin="20,110,20,0" VerticalAlignment="Top"  FontFamily="Segoi UI" FontSize="14" IsEnabled="{Binding UseCustomColor}" SelectedColor="{Binding ThemeColor}"/>
+                                <Label Content="Use Dark Theme" HorizontalAlignment="Left" Margin="15,140,0,0" VerticalAlignment="Top"/>
+                                <mtr:ToggleSwitch Margin="23,170,0,0" Width="228" HorizontalAlignment="Left" FontFamily="Segoi UI" FontSize="14" IsChecked="{Binding UseDarkTheme}" VerticalAlignment="Top" />
+                                <Button BorderThickness="0" Background="Transparent" HorizontalAlignment="Stretch" Margin="0,220,0,408" HorizontalContentAlignment="Left" Content="    Back" Height="37" Click="button_MainMenuClick"/>
                             </Grid>
                         </Grid>
-                </StackPanel>
+                    </StackPanel>
                 </ScrollViewer>
             </mtr:Flyout>
         </mtr:FlyoutsControl>
